infrastructure/ansible/files/manifests/ingress/aws-load-balancer/ingress-gameland.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameland-ingress
  namespace: gameland
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: gameland
    alb.ingress.kubernetes.io/target-node-labels: role=worker-app
    external-dns.alpha.kubernetes.io/hostname: website.gameland-demo.com
spec:
  ingressClassName: alb
  rules:
    - host: website.gameland-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gameland
                port:
                  number: 80
